# Game-Of-Life

./: CMakeLists.txt  GameEngine.cpp  GameInterface.cpp  GameOfLife.hpp  GameState.cpp  ParserCommandLine.cpp  ParserCommands.cpp  ParserFile.cpp  README.md  example.live  game5.live  kjh.live  main  main.cpp  otput.live  wrong.live
games/: game2.live  game3.live  game4.live  game5.live
tests/: CMakeLists.txt  GameOfLifeTests.cpp
